--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
   <body>
     <%= render partial: 'layouts/partials/navbar'%>
 
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
 
     <%= render partial: 'layouts/partials/scripts' %>
   </body>
