--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row no-gutters">
-    <div class="col-sm-12">
+  <div class="row justify-content-center">
+    <div class="col-5">
       <h2>Sign up</h2>
 
       <div class="form">
