--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -10,21 +10,18 @@
           </ul>
         </div>
     <% end %>
-    <div>
-      <%= f.label :name %>
-      <%= f.text_field :name, placeholder: :name %>
+    <div class="form-group">
+      <%= f.text_field :name, placeholder: :name, class:'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.text_area :excerpt, placeholder: :excerpt, rows: 5, class:'form-control' %>
     </div>
     <div>
-      <%= f.label :excerpt %>
-      <%= f.text_area :excerpt, placeholder: :excerpt, rows: 5 %>
-    </div>
-    <div>
-      <%= f.label :body %>
       <%= f.cktext_area :body, placeholder: :body %>
     </div>
     <div class="field">
        <%= f.label :tag_list %>
-       <%= f.select :tag_list, Tag.all.map{|t| [t.name, t.id]}, {}, {multiple: true} %>
+       <%= f.select :tag_list, Tag.all.map{|t| [t.name, t.id]}, {}, {multiple: true, class:'form-control'} %>
     </div>
     <%= f.submit @article.persisted? ? 'Publish Changes' : 'Publish Article' %>
     <%= f.submit 'Save Draft' if !@article.persisted? %>
