--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,39 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-5">
-      <h2>Sign up</h2>
+    <div class="col-lg-5 col-md-8 col-12">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title">Sign up</h2>
 
-      <div class="form">
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %> <%= devise_error_messages! %>
+          <div class="form">
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %> <%= devise_error_messages! %>
 
-        <div class="form-group">
-          <%= f.label :email %>
-          <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: "Enter email" %>
+            <div class="form-group">
+              <%= f.label :email %>
+              <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: "Enter email" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :password %>
+              <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %><br />
+              <%= f.password_field :password, autocomplete: "off", class: 'form-control', placeholder: "Enter password" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :password_confirmation %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', placeholder: "Confirm password" %>
+            </div>
+
+            <div class="actions">
+              <%= f.submit "Sign up", class: 'btn btn-primary' %>
+            </div>
+            <% end %>
+          </div>
+          <br><%= render "devise/shared/links" %>
         </div>
-
-        <div class="form-group">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "off", class: 'form-control', placeholder: "Enter password" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', placeholder: "Confirm password"%>
-        </div>
-
-        <div class="actions">
-        <br> <%= f.submit "Sign up", class: 'btn btn-primary' %>
-        </div>
-        <% end %>
       </div>
-      <br><%= render "devise/shared/links" %>
     </div>
   </div>
 </div>
