--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,6 +3,16 @@
 <div>
   <%= raw @article.body %>
 </div>
+<p>Tags: <%= @article.tags.map{|t| t.name}.join(',') %></p>
+<div>
+  <div>
+    <p>New Comment</p>
+    <%= render partial:'comments/new_form', locals:{entity:@article} %>
+    <div class="comments">
+      <%= render @article.comments.where.not(id: nil).order(created_at: :asc) %>
+    </div>
+  </div>
+</div>
 <% if current_user.present? && @article.user == current_user %>
     <%= link_to 'Edit', edit_article_path(@article.permalink) %>
     <%= link_to 'Destroy', article_path(@article.permalink), method: :delete, 'data-confirm': 'Are you sure?' %>
