--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,7 @@
-<div class="col-12">
-  <%= raw comment.body %>
-  <p>Comment by <%= comment.user.email %></p>
+<div class="media mb-4">
+  <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+  <div class="media-body">
+    <h5 class="mt-0"><%= comment.user.email %></h5>
+    <%= raw comment.body %>
+  </div>
 </div>
