--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -2,6 +2,13 @@ body {
   padding-top: 68px;
 }
 
+.article-body{
+  img{
+    max-width: 100% !important;
+    height: auto !important;
+  }
+}
+
 @media (min-width: 992px) {
   body {
     padding-top: 70px;
