--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,7 +12,7 @@
             <div class="card-body">
               <h2 class="card-title"><%= article.name %></h2>
               <p class="card-text"><%= article.excerpt %></p>
-              <%= link_to 'Read More →'.html_safe, article_path(article.permalink), class: 'btn btn-primary' %>
+              <%= link_to 'Read More →'.html_safe, article_path(article), class: 'btn btn-primary' %>
             </div>
             <div class="card-footer text-muted">
               Posted on <%= article.published_at.strftime('%B %d, %Y') %> by
