--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -1,24 +1,22 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">Opinion Base</a>
+    <%= link_to 'Opinion Base', root_path, class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item <%= controller_name == 'articles' ? 'active' : nil %>">
+          <%= link_to 'Explore', articles_path, class: 'nav-link' %>
+          <%= controller_name == 'articles' ? '<span class="sr-only">(current)</span>'.html_safe : nil %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Explore', articles_path, class:'nav-link' %>
+          <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Sign Up', new_user_registration_path, class:'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Login', new_user_session_path, class:'nav-link' if !current_user.present? %>
-          <%= link_to 'Logout', destroy_user_session_path, method: :delete, class:'nav-link' if current_user.present? %>
+          <%= link_to 'Login', new_user_session_path, class: 'nav-link' if !current_user.present? %>
+          <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link' if current_user.present? %>
         </li>
       </ul>
     </div>
