--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,10 @@
 <div class="media mb-4">
   <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
   <div class="media-body">
-    <h5 class="mt-0"><%= comment.user.email %></h5>
-    <%= raw comment.body %>
+    <h5 class="mt-0">@<%= comment.user.username %></h5>
+    <div>
+      <%= raw comment.body %>
+    </div>
+    <small>Commented at <%= comment.created_at.strftime('%B %d, %Y') %></small>
   </div>
 </div>
