--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,1 +1,3 @@
-<%= render partial:'form', locals: {article: @article} %>
+<div class="container">
+  <%= render partial: 'form', locals: {article: @article} %>
+</div>
