--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -11,13 +11,22 @@
           <%= link_to 'Explore', articles_path, class: 'nav-link' %>
           <%= controller_name == 'articles' ? '<span class="sr-only">(current)</span>'.html_safe : nil %>
         </li>
-        <li class="nav-item">
-          <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Login', new_user_session_path, class: 'nav-link' if !current_user.present? %>
-          <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link' if current_user.present? %>
-        </li>
+        <% if current_user.present? %>
+            <li class="nav-item dropdown">
+              <%= link_to current_user.username, '#', class:'nav-link dropdown-toggle', id:'user-menu', 'data-toggle': 'dropdown', 'aria-haspopup': true, 'aria-expanded': false%>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-menu">
+                <%= link_to 'Settings', edit_user_registration_path, class: 'dropdown-item' %>
+                <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
+              </div>
+            </li>
+        <% else %>
+            <li class="nav-item">
+              <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Login', new_user_session_path, class: 'nav-link' %>
+            </li>
+        <% end %>
       </ul>
     </div>
   </div>
