--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,18 +1,22 @@
+<% @article.update!(views: @article.views+1) %>
 <div class="container">
   <div class="row">
     <div class="col-lg-8">
-      <h1 class="mt-4"><%= @article.name %></h1>
-      <p class="lead">
+      <h3 class="mt-4 text-center text-sm-left"><%= @article.name %></h3>
+      <p class="lead text-center text-sm-left">
         by
         <a href="#">@<%= @article.user.username %></a>
+        <small><span id="author-follow"><%= link_to !current_user.follows(@article.user.id).any? ? '<i class="fa fa-user-plus"></i> Following'.html_safe : '<i class="fa fa-user-plus"></i>Follow'.html_safe,follow_me_path(user_id: @article.user.id), method: :post, remote: true, class:'badge badge-primary' %></span></small>
       </p>
       <hr>
-      <p>Posted on <%= @article.published_at.strftime('%B %d, %Y') %>&nbsp;<%= render @article.tags %>&nbsp;&nbsp;
-        <span class="float-right">
+      <div class="row no-margin">
+        <div class="col-sm-6 text-center text-sm-left">Posted on <%= @article.published_at.strftime('%B %d, %Y') %>&nbsp;<%= render @article.tags %></div>
+        <div class="col-sm-6 text-center text-sm-right">
+          <span class="badge badge-secondary"><%= @article.views %> Reads</span>
           <span class="like"><%= link_to current_user.interactions.where(entity: @article, interaction:'Like').any? ? "<i class='fa fa-thumbs-up' aria-hidden='true'></i> <strong>Liked</strong>".html_safe : "<i class='fa fa-thumbs-o-up' aria-hidden='true'></i> Like".html_safe, interaction_article_path(id: @article.id, interaction: 'Like', format: :js), method: :post, remote: true if current_user.present? %></span>
           <span class="bookmark"><%= link_to current_user.interactions.where(entity: @article, interaction:'Save').any? ? "<i class='fa fa-bookmark' aria-hidden='true'></i> <strong>Bookmarked</strong>".html_safe : "<i class='fa fa-bookmark-o' aria-hidden='true'></i> Read Later".html_safe, interaction_article_path(id: @article.id, interaction: 'Save', format: :js), method: :post, remote: true if current_user.present? %></span>
-        </span>
-      </p>
+        </div>
+      </div>
       <hr>
       <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
       <hr>
@@ -28,8 +32,3 @@
     <%= render 'layouts/articles_sidebar' %>
   </div>
 </div>
-
-<% if current_user.present? && @article.user == current_user %>
-    <%= link_to 'Edit', edit_article_path(@article) %>
-    <%= link_to 'Destroy', article_path(@article), method: :delete, 'data-confirm': 'Are you sure?' %>
-<% end %>
