--- a/app/views/admin/my_articles.html.erb
+++ b/app/views/admin/my_articles.html.erb
@@ -16,7 +16,7 @@
         <% @articles.each_with_index do |article, index| %>
             <tr>
               <td class="text-center"><%= index + 1 %></td>
-              <td class="text-left"><%= article.name %></td>
+              <td class="text-left"><%= link_to article.name, article_path(article)%></td>
               <td class="text-center"><%= article.published_at.present? ? 'published' : 'draft' %></td>
               <td class="text-center"><%= article.published_at.present? ? article.published_at.strftime('%d %B, %Y') : '–' %></td>
               <td class="text-center"><%= link_to 'Edit', edit_article_path(article) %>
