--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,19 +5,23 @@
     <!-- Blog Entries Column -->
     <div class="col-md-8">
 
-      <h1 class="my-4">Explore Articles</h1>
+      <% if params[:action] == 'search' %>
+          <h1 class="my-4">Search Results</h1>
+          <p>Search results for "<%= params[:query] %>"</p>
+      <% elsif params[:action] == 'author' %>
+          <div class="mt-3 mb-3 row no-margin">
+            <h2 class="author-articles-title">
+              <%= image_tag('http://placehold.it/50x50', class: 'rounded-circle') %>
+              Articles by @<%= params[:username] %>
+            </h2>
+          </div>
+      <% else %>
+          <h1 class="my-4">Explore Articles</h1>
+      <% end %>
 
       <%= render @articles %>
 
-      <!-- Pagination -->
-      <ul class="pagination justify-content-center mb-4">
-        <li class="page-item">
-          <a class="page-link" href="#">← Older</a>
-        </li>
-        <li class="page-item disabled">
-          <a class="page-link" href="#">Newer →</a>
-        </li>
-      </ul>
+      <%= will_paginate @articles, renderer: BootstrapPagination::Rails %>
 
     </div>
 
