--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,10 +1,7 @@
 <% if @comment.entity_type != 'Comment' %>
-  $('.comments').append("<%= escape_javascript render(@comment) %>");
-  $("form#new_comment")[0].reset();
-  for ( instance in CKEDITOR.instances ){
-    CKEDITOR.instances[instance].updateElement();
-    CKEDITOR.instances[instance].setData('');
-  }
+$('.comments').append("<%= escape_javascript render(@comment) %>");
+$("form#new_comment")[0].reset();
 <% else %>
-  $('#<%= @comment.entity.class.name.downcase%>-<%= @comment.entity.id %>').append("<%= escape_javascript render(@comment) %>");
+$("#<%= @comment.entity.class.name.downcase%>-<%= @comment.entity.id %> div.card").remove();
+$('#<%= @comment.entity.class.name.downcase%>-<%= @comment.entity.id %>').append("<%= escape_javascript render(@comment) %>");
 <% end %>
