--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -1,38 +1,38 @@
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
-    <%= link_to 'Opinion Base', root_path, class: 'navbar-brand' %>
+    <%= link_to image_tag('opinionbaselogo.png'), root_path, class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item <%= controller_name == 'articles' ? 'active' : nil %>">
+        <li class="nav-item text-center text-md-left <%= controller_name == 'articles' ? 'active' : nil %>">
           <%= link_to 'Explore', articles_path, class: 'nav-link' %>
           <%= controller_name == 'articles' ? '<span class="sr-only">(current)</span>'.html_safe : nil %>
         </li>
 
         <% if current_user.present? %>
-            <li class="nav-item <%= controller_name == 'admin' && action_name == 'index' ? 'active' : nil %>">
+            <li class="nav-item text-center text-md-left <%= controller_name == 'admin' && action_name == 'index' ? 'active' : nil %>">
               <%= link_to 'Dashboard', admin_path, class: 'nav-link' %>
               <%= controller_name == 'admin' && action_name == 'index'  ? '<span class="sr-only">(current)</span>'.html_safe : nil %>
             </li>
-            <li class="nav-item <%= controller_name == 'admin' && action_name == 'my_articles' ? 'active' : nil %>">
+            <li class="nav-item text-center text-md-left <%= controller_name == 'admin' && action_name == 'my_articles' ? 'active' : nil %>">
               <%= link_to 'My Articles', my_articles_path, class: 'nav-link' %>
               <%= controller_name == 'admin' && action_name == 'my_articles' ? '<span class="sr-only">(current)</span>'.html_safe : nil %>
             </li>
-            <li class="nav-item dropdown">
-              <%= link_to current_user.username, '#', class:'nav-link dropdown-toggle', id:'user-menu', 'data-toggle': 'dropdown', 'aria-haspopup': true, 'aria-expanded': false%>
+            <li class="nav-item text-center text-md-left dropdown">
+              <%= link_to '@'+current_user.username, '#', class:'nav-link dropdown-toggle', id:'user-menu', 'data-toggle': 'dropdown', 'aria-haspopup': true, 'aria-expanded': false%>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-menu">
                 <%= link_to 'Settings', edit_user_registration_path, class: 'dropdown-item' %>
                 <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
               </div>
             </li>
         <% else %>
-            <li class="nav-item">
+            <li class="nav-item text-center text-md-left">
               <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-center text-md-left">
               <%= link_to 'Login', new_user_session_path, class: 'nav-link' %>
             </li>
         <% end %>
