--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <section class="metrics">
+  <section class="metrics mt-3">
     <div class="row no-margin mb-4">
       <div class="col-sm-4">
         <div class="card">
@@ -51,10 +51,10 @@
             </tr>
             </thead>
             <tbody>
-            <% @articles.order(:views).limit(5).each_with_index do |article, index| %>
+            <% @articles.order(views: :desc).limit(5).each_with_index do |article, index| %>
                 <tr>
                   <td class="text-center"><%= index + 1 %></td>
-                  <td class="text-left"><%= link_to article.name, article_path(article) %></td>
+                  <td class="text-left"><%= link_to article.name, article_path(article.permalink) %></td>
                   <td class="text-center"><%= article.views %></td>
                   <td class="text-center"><%= article.likes %></td>
                   <td class="text-center"><%= article.read_later %></td>
