--- a/app/views/layouts/_articles_sidebar.html.erb
+++ b/app/views/layouts/_articles_sidebar.html.erb
@@ -18,24 +18,24 @@
       <div class="row">
         <div class="col-lg-12">
           <% Tag.all.each do |t| %>
-              <%= link_to t.name, tag_path(t.name.downcase) %>&nbsp;&nbsp;&nbsp;
+              <a href="#"><%= t.name %></a>&nbsp;&nbsp;&nbsp;
           <% end %>
         </div>
       </div>
     </div>
   </div>
   <% if current_user.present? %>
-      <div class="card my-4">
-        <h5 class="card-header">Following</h5>
-        <div class="card-body no-padding">
-          <ul class="list-group">
-            <% current_user.followings.each do |f| %>
-                <li class="list-group-item row no-margin <%= params[:username] && params[:username] == f.follow.username ? 'active' : nil %>">
-                  <%= link_to image_tag('http://placehold.it/30x30', class: 'rounded-circle')+'  @'+f.follow.username, author_articles_path(f.follow.username) %>
-                </li>
-            <% end %>
-          </ul>
-        </div>
-      </div>
+  <div class="card my-4">
+    <h5 class="card-header">Following</h5>
+    <div class="card-body no-padding">
+      <ul class="list-group">
+        <% current_user.followings.each do |f| %>
+            <li class="list-group-item row no-margin <%= params[:username] && params[:username] == f.follow.username ? 'active' : nil %>">
+              <%= link_to image_tag('http://placehold.it/30x30', class: 'rounded-circle')+'  @'+f.follow.username, author_articles_path(f.follow.username) %>
+            </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
   <% end %>
 </div>
