--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -160,6 +160,11 @@ ul.pagination li.disabled span, ul.pagination li.disabled a{
   border-color: #4C5CA5;
 }
 
+.list-group-item a img.rounded-circle, .author-articles-title img.rounded-circle, img.d-flex.mr-3.rounded-circle{
+  width: 50px;
+  height: 50px;
+}
+
 .article-body p img{
   display:block;
   margin: auto auto;
