--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,7 @@
       <% elsif params[:action] == 'author' %>
           <div class="mt-3 mb-3 row no-margin">
             <h2 class="author-articles-title">
-              <%= image_tag('http://placehold.it/50x50', class: 'rounded-circle') %>
+              <%= image_tag(@user.avatar.url(:thumb), class: 'rounded-circle') %>
               Articles by @<%= params[:username] %>
             </h2>
           </div>
