--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -13,6 +13,10 @@
         </li>
 
         <% if current_user.present? %>
+            <li class="nav-item text-center text-md-left <%= controller_name == 'author' ? 'active' : nil %>">
+              <%= link_to 'Authors', authors_path, class: 'nav-link' %>
+              <%= controller_name == 'author' ? '<span class="sr-only">(current)</span>'.html_safe : nil %>
+            </li>
             <li class="nav-item text-center text-md-left <%= controller_name == 'admin' && action_name == 'index' ? 'active' : nil %>">
               <%= link_to 'Dashboard', admin_path, class: 'nav-link' %>
               <%= controller_name == 'admin' && action_name == 'index'  ? '<span class="sr-only">(current)</span>'.html_safe : nil %>
